              is now: main, contrib, non-free.  (Closes: #181997)

  * [curses]: Improve error messages when parsing grouping policies to
              use the user-visible names, rather than the internal
              names.  (Closes: #231595)

  * [all]: Change default width of %D, %I, %o, and %Z.  Thanks to
           Michał Kułach for this one. (Closes: #599209)
           (LP: #741417)

  * [cmdline]: Use nice formatting for both parts of the download
               progress display.  Previously the 'downloaded' size was
               being reported in bytes; now it uses larger units as
               appropriate to be more readable.

  * [cmdline]: 'versions' now groups it's results by 'package:arch'
               instead of 'package'.

- Build system changes:

  * [all]: Add configure option '--disable-tests'.

  * [all]: Don't check for libvte if GTK+ is disabled.

  * [all]: Apply patch from Ubuntu to fix build -D_FORTIFY_SOURCE=2
           errors.  Thanks to Colin Watson and Michael Vogt
           (Closes: #497539)

- Documentation:

  * [doc]: Minor correction to the user's manual. (Closes: #365485)

  * [doc]: Clean recent changes to man page description of
           'forbid-version'.

- Translation updates:

  * Brazilian Portuguese (Closes: #483964)
  * Hungarian (Closes: #592468)
  * Polish (Closes: #659803)
  * Russian (Closes: #662624)

[2/6/2012]
Version 0.6.5                               "Splat!"

- Removed features:

  * [cmdline]: Remove broken safe-upgrade-only options.

               Specifically, Safe-Upgrade::No-New-Installs and
               Safe-Upgrade::Show-Resolver-Actions.

               These options were documented but have never worked.  A
               quick skim didn't turn up any bugs filed about them, so
               I guess no-one ever tried them.  Removed them.

- Minor bugs:

  * [all]: Do not translate program options in Catalan translation.
           (Closes: #462558)
