@@ -7392,7 +7392,7 @@ e: Examine  !: Apply  .: Next  ,: Previous</screen>
 	    <seglistitem>
 	      <seg><literal>%v</literal></seg>
 	      <seg>Current Version</seg>
-	      <seg>10</seg>
+	      <seg>14</seg>
 	      <seg>No</seg>
 	      <seg>
 		Outputs the currently installed version of the
@@ -7405,7 +7405,7 @@ e: Examine  !: Apply  .: Next  ,: Previous</screen>
 	    <seglistitem id='formatCandVer'>
 	      <seg><literal>%V</literal></seg>
 	      <seg>Candidate Version</seg>
-	      <seg>10</seg>
+	      <seg>14</seg>
 	      <seg>No</seg>
 	      <seg>
 		Outputs the version of the package which would be
