@@ -105,6 +105,10 @@ resolve any problems.
            Michał Kułach for this one. (Closes: #599209)
            (LP: #741417)
 
+  * [all]: Change default width of %V, %v to 14.  This greatly increases
+           the number of versions which will display completely.
+           (Closes: #624542)
+
   * [cmdline]: Use nice formatting for both parts of the download
                progress display.  Previously the 'downloaded' size was
                being reported in bytes; now it uses larger units as
